Correct alignment for resume button and nav list items

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -109,7 +109,6 @@
   background-color: $primary-portfolio-AquaMint;
   border-radius: 0.5rem;
   margin-right: 2rem;
-  margin-top: 1rem;
 
   @include tablet {
     margin-right: 0rem;
